# mcp-sse-authorizer

./: README.md  mcp_authorizer.py  pyproject.toml
