[project]
name = "mcp-sse-authorizer"
version = "0.1.0"
description = "A command-line tool to authenticate with Model Context Protocol (MCP) SSE endpoints"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.3",
]

[project.scripts]
mcp-authorizer = "mcp_authorizer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
